# osocks

./: CMakeLists.txt  README.md  main.c  osocks.h  tests.sh
